# smartPenApp

./: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
api/: latex_plugin.py  ocr_model.py  requirements.txt  sentiment_plugin.py  server.py
app/: PluginManager.tsx  StackNavigator.tsx  _layout.tsx  index.tsx  types.ts  useBLE.ts  utils.ts
app/components/: AnnotationTools.tsx  Annotations.tsx  HelloWorld.tsx  PagePreview.tsx  PageSelector.tsx  annotations.tsx
app/constants/: MenuItems.tsx
app/plugins/: LatexPlugin.tsx  PluginManager.ts  index.ts
app/screens/: DeviceConnectionModal.tsx  Documents.tsx  Login.tsx  Main.tsx  PluginsModal.tsx  Profile.tsx  Settings.tsx  utils.ts
expo/: app.json  metro.config.js  package.json  types.ts
expo/android/app/src/main/: AndroidManifest.xml
expo/android/app/src/main/java/com/anonymous/smartPenApp/: MainActivity.kt  MainApplication.kt
expo/app/: PluginManager.tsx  StackNavigator.tsx  _layout.tsx  index.tsx  types.ts  useBLE.ts
expo/app/components/: AnnotationTools.tsx  Annotations.tsx
expo/app/documents/: PluginSettings.tsx  Profile.tsx  [Main].tsx  index.tsx
expo/app/documents/(tabs)/: Profile.tsx  [Main].tsx  _layout.tsx
expo/app/plugins/: WeatherPlugin.tsx  index.ts
expo/app/plugins/plugins/: Ok.tsx  PlugInfo.ts
expo/app/screens/: Documents.tsx  Login.tsx  Main.tsx
expo/components/: AnnotationTools.tsx  Annotations.tsx  DeviceConnectionModal.tsx  Login.tsx  PagePreview.tsx  PageSelector.tsx  SettingsContent.tsx  TopBarTools.tsx  useBLE.ts
expo/ios/: Podfile
expo/ios/smartPenApp.xcodeproj/: project.pbxproj
expo/ios/smartPenApp.xcodeproj/xcshareddata/xcschemes/: smartPenApp.xcscheme
expo/plugins/: LatexPlugin.tsx  PluginManager.tsx  SentimentPlugin.tsx  WeatherPlugin.tsx  index.ts
hardware/: bleService.py  undistort.py
hardware/gobbledegook/: Makefile  README.md  config.status
hardware/gobbledegook/src/: FPSCounter.h  Makefile  Makefile.am  Makefile.in  Server.cpp  standalone.cpp
hardware/gobbledegook/src/.deps/: libggk_a-DBusInterface.Po  libggk_a-DBusMethod.Po  libggk_a-DBusObject.Po  libggk_a-GattCharacteristic.Po  libggk_a-GattDescriptor.Po  libggk_a-GattInterface.Po  libggk_a-GattProperty.Po  libggk_a-GattService.Po  libggk_a-Gobbledegook.Po  libggk_a-HciAdapter.Po  libggk_a-HciSocket.Po  libggk_a-Init.Po  libggk_a-Logger.Po  libggk_a-Mgmt.Po  libggk_a-Server.Po  libggk_a-ServerUtils.Po  libggk_a-Utils.Po  libggk_a-standalone.Po  standalone-standalone.Po
ios/smartPenApp/: Info.plist
mechanical/v1/: Tip.stl  connector.stl  imu_lid.stl  rpi_base.stl  stopper.stl
mechanical/v2/: imu_lid_real.stl  lower_pen.stl  rpi_base.stl  stopper.stl  upper_pen.stl
mechanical/v3/: back_camera.stl  front_camera.stl  grip_camera.stl  rpi_base.stl  rpi_cover.stl
scripts/: opticalFlowVisualizer.py
